--- a/blibli.html
+++ b/blibli.html
@@ -3,145 +3,7 @@
 
 <head>
     <title>Toko Online Blibli.com, Sensasi Belanja Online Shop ala Mall</title>
-    <style>
-    body {
-        color: #515151;
-        font-family: "Open Sans", Arial, sans serif;
-        font-size: 14px;
-        height: 100%;
-        width: 380px;
-        margin: auto;
-    }
-
-    .header {
-        text-align: center;
-        background-color: #0096d9;
-        padding: 10px 0;
-    }
-
-    .main {
-        text-align: center;
-    }
-
-    h2 {
-        font-size: 16px;
-        font-weight: 400;
-        color: #666;
-    }
-
-    .search {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 5px;
-    }
-
-    .search__text {
-        width: 100%;
-        height: 36px;
-        outline: 0;
-        padding-left: 20px;
-        border: 1px solid #ccc;
-    }
-
-    .search__text:focus {
-        border: 1px solid #f7931e;
-    }
-
-    .search__btn {
-        height: 40px;
-        width: 70px;
-        padding-top: 7px;
-        outline: 0;
-        border: 0;
-        background-color: #f7931e;
-    }
-
-    .search__btn path {
-        fill: #fff;
-    }
-
-    .promo {
-        background-color: #0096d9;
-        padding: 10px 0;
-        text-decoration: none;
-        display: block;
-        color: #fff;
-        margin: 20px 20px 0 20px;
-        border-radius: 25px;
-    }
-
-    .travel,
-    .digital,
-    .kategori {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-
-    .travel li,
-    .digital li,
-    .kategori li {
-        display: inline-block;
-    }
-
-    .travel .title,
-    .digital .title,
-    .kategori .title {
-        margin-top: 5px;
-    }
-
-    .travel li a,
-    .digital li a,
-    .kategori li a {
-        position: relative;
-        display: block;
-        text-decoration: none;
-        font-size: 14px;
-        font-weight: bold;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #ddd;
-        width: 100px;
-        color: #0096d9;
-    }
-
-    .travel li a:hover,
-    .digital li a:hover,
-    .kategori li a:hover {
-        border: 1px solid #0096d9;
-        background-color: #0096d9;
-        color: #fff;
-    }
-
-    .travel li a:hover path,
-    .digital li a:hover path,
-    .kategori li a:hover path {
-        fill: #fff;
-    }
-
-    .footer {
-        line-height: 1.5;
-        font-size: 12px;
-        padding: 10px 0;
-        text-align: center;
-        background-color: #0096d9;
-        color: #fff;
-        background-image: url(images/foot_pattern.png);
-        background-repeat: repeat-x;
-        background-position: bottom;
-        background-size: 500px;
-    }
-
-    .footer a {
-        color: #fff;
-        text-decoration: none;
-    }
-
-    .footer a:hover {
-        text-decoration: underline;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 
 <body class="blibli">
